<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dip"
                android:layout_height="64dip"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_talk"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="24sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dip"
            android:layout_marginStart="20dip"
            android:layout_marginTop="24dip"
            android:background="@drawable/radius_drawable_bg"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dip"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@mipmap/ic_account"
                    tools:ignore="ContentDescription" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/account_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/sign_up_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/account"
                        android:inputType="phone"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dip">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@mipmap/ic_lock"
                    tools:ignore="ContentDescription" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dip"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginTop="144dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dip">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="22dp"
                    android:src="@mipmap/ic_lock"
                    tools:ignore="ContentDescription" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/check_pwd_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dip"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/sign_up_password_check"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/check_password"
                        android:inputType="textPassword"
                        android:imeOptions="actionGo"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_ripple_login"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>